--- a/spec/remote/remote.example.yml
+++ b/spec/remote/remote.example.yml
@@ -1,4 +1,4 @@
-# Copy this file to config/remote.yml and make adjustments as necessary.
+# Copy this file to spec/remote/remote.yml and make adjustments as necessary.
 #
 # Note: Remote tests will only work when configured to run on a test site that uses the Bogus gateway.
 # Warning: all data in the site specified by 'subdomain' will be cleared and replaced with test data.
