--- a/spec/remote/remote.example.yml
+++ b/spec/remote/remote.example.yml
@@ -1,7 +1,6 @@
 # Copy this file to spec/remote/remote.yml and make adjustments as necessary.
 #
 # Note: Remote tests will only work when configured to run on a test site that uses the Bogus gateway.
-# Warning: all data in the site specified by 'subdomain' will be cleared and replaced with test data.
-run_tests: true
-subdomain: yoursubdomain
-api_key: xxx
+# Warning: All data in the site specified will be cleared and replaced with test data.
+api_key: your_api_key
+site: your_site
