--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
 language: ruby
 rvm:
+  - 2.1.0
   - 2.0.0
   - 1.9.3
   - 1.9.2
   - 1.8.7
   - ree
+  - jruby
+  - ruby-head
+matrix:
+  allow_failures:
+    - rvm: jruby
+    - rvm: ruby-head
+  fast_finish: true
+
