--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 language: ruby
 rvm:
-  - 2.1.0
+  - 2.1.2
   - 2.0.0
   - 1.9.3
-  - 1.9.2
-  - 1.8.7
-  - ree
   - jruby
   - ruby-head
+  - rbx-2
 matrix:
   allow_failures:
     - rvm: jruby
     - rvm: ruby-head
+    - rvm: rbx-2
   fast_finish: true
-
