add apprasails to test on multiple versions of rails

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,8 @@ matrix:
     - rvm: ruby-head
     - rvm: rbx-2
   fast_finish: true
+
+gemfile:
+  - gemfiles/rails_3.gemfile
+  - gemfiles/rails_4.gemfile
+  - gemfiles/rails_4.1.gemfile
