--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 before_install:
   - gem update --system
   - gem update bundler
+  - bundle install --no-deployment
 rvm:
   - 2.1.3
   - 2.0.0
